feat: Initial feature engineering

--- a/notebooks/data_cleaning.ipynb
+++ b/notebooks/data_cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "cab67a2d",
    "metadata": {},
    "outputs": [],
@@ -136,7 +136,7 @@
        "4    246.10           0.00      177.72      False  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "59c8e110",
    "metadata": {},
    "outputs": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "1929b538",
    "metadata": {},
    "outputs": [
@@ -314,7 +314,7 @@
        "max    3.598900e+02  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "907d4634",
    "metadata": {},
    "outputs": [],
@@ -336,23 +336,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
+   "id": "f1de9fa5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"timestamp\"] = pd.to_datetime(df[\"timestamp\"])\n",
+    "df[[\"icao24\", \"callsign\"]] = df[[\"icao24\", \"callsign\"]].astype(str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "5967851e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "timestamp         object\n",
-       "icao24            object\n",
-       "callsign          object\n",
-       "latitude         float64\n",
-       "longitude        float64\n",
-       "baro_altitude    float64\n",
-       "velocity         float64\n",
-       "vertical_rate    float64\n",
-       "true_track       float64\n",
-       "on_ground           bool\n",
+       "timestamp        datetime64[ns]\n",
+       "icao24                   object\n",
+       "callsign                 object\n",
+       "latitude                float64\n",
+       "longitude               float64\n",
+       "baro_altitude           float64\n",
+       "velocity                float64\n",
+       "vertical_rate           float64\n",
+       "true_track              float64\n",
+       "on_ground                  bool\n",
        "dtype: object"
       ]
      },
