feat: more feature engineering

--- a/notebooks/feature_engineering.ipynb
+++ b/notebooks/feature_engineering.ipynb
@@ -152,17 +152,375 @@
    "metadata": {},
    "source": [
     "### Feature introduction:\n",
-    "1. timestamp: timestamp at which data was recorded.\n",
-    "2. icao24: Unique ICAO 24-bit address of the transponder in hex string representation.\n",
-    "3. callsign: "
+    "> 1. **timestamp**: timestamp at which data was recorded.\n",
+    "> 2. **icao24**: Unique ICAO 24-bit address of the transponder in hex string representation.\n",
+    "> 3. **callsign**: Callsign of the vehicle (8 chars). Can be null if no callsign has been received.\n",
+    "> 4. **latitude**: WGS-84 latitude in decimal degrees. Can be null.\n",
+    "> 5. **longitude**: WGS-84 longitude in decimal degrees. Can be null.\n",
+    "> 6. **baro_altitude**: Barometric altitude in meters. Can be null.\n",
+    "> 7. **velocity**: Velocity over ground in m/s. Can be null.\n",
+    "> 8. **vertical_rate**: Vertical rate in m/s. A positive value indicates that the airplane is climbing, a negative value indicates that it descends. Can be null.\n",
+    "> 9. **true_track**: True track in decimal degrees clockwise from north (north=0°). Can be null.\n",
+    "> 10. **on_ground**: Boolean value which indicates if the position was retrieved from a surface position report."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "8e04083d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1088"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"timestamp\"].nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "04879b8f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.sort_values(by=[\"icao24\", \"timestamp\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "88b28c0a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>icao24</th>\n",
+       "      <th>callsign</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>baro_altitude</th>\n",
+       "      <th>velocity</th>\n",
+       "      <th>vertical_rate</th>\n",
+       "      <th>true_track</th>\n",
+       "      <th>on_ground</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>153377</th>\n",
+       "      <td>2026-02-13 16:54:43</td>\n",
+       "      <td>0100a2</td>\n",
+       "      <td>MSR5060</td>\n",
+       "      <td>30.8237</td>\n",
+       "      <td>30.5251</td>\n",
+       "      <td>9052.56</td>\n",
+       "      <td>213.33</td>\n",
+       "      <td>7.15</td>\n",
+       "      <td>322.05</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>154423</th>\n",
+       "      <td>2026-02-13 16:55:00</td>\n",
+       "      <td>0100a2</td>\n",
+       "      <td>MSR5060</td>\n",
+       "      <td>30.8654</td>\n",
+       "      <td>30.4872</td>\n",
+       "      <td>9197.34</td>\n",
+       "      <td>212.92</td>\n",
+       "      <td>7.15</td>\n",
+       "      <td>321.97</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>155466</th>\n",
+       "      <td>2026-02-13 16:55:05</td>\n",
+       "      <td>0100a2</td>\n",
+       "      <td>MSR5060</td>\n",
+       "      <td>30.8687</td>\n",
+       "      <td>30.4843</td>\n",
+       "      <td>9212.58</td>\n",
+       "      <td>212.92</td>\n",
+       "      <td>7.15</td>\n",
+       "      <td>321.97</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>156509</th>\n",
+       "      <td>2026-02-13 16:55:05</td>\n",
+       "      <td>0100a2</td>\n",
+       "      <td>MSR5060</td>\n",
+       "      <td>30.8687</td>\n",
+       "      <td>30.4843</td>\n",
+       "      <td>9212.58</td>\n",
+       "      <td>212.92</td>\n",
+       "      <td>7.15</td>\n",
+       "      <td>321.97</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>157548</th>\n",
+       "      <td>2026-02-13 16:55:34</td>\n",
+       "      <td>0100a2</td>\n",
+       "      <td>MSR5060</td>\n",
+       "      <td>30.9144</td>\n",
+       "      <td>30.4426</td>\n",
+       "      <td>9273.54</td>\n",
+       "      <td>219.83</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>321.84</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  timestamp  icao24  callsign  latitude  longitude  \\\n",
+       "153377  2026-02-13 16:54:43  0100a2  MSR5060    30.8237    30.5251   \n",
+       "154423  2026-02-13 16:55:00  0100a2  MSR5060    30.8654    30.4872   \n",
+       "155466  2026-02-13 16:55:05  0100a2  MSR5060    30.8687    30.4843   \n",
+       "156509  2026-02-13 16:55:05  0100a2  MSR5060    30.8687    30.4843   \n",
+       "157548  2026-02-13 16:55:34  0100a2  MSR5060    30.9144    30.4426   \n",
+       "\n",
+       "        baro_altitude  velocity  vertical_rate  true_track  on_ground  \n",
+       "153377        9052.56    213.33           7.15      322.05      False  \n",
+       "154423        9197.34    212.92           7.15      321.97      False  \n",
+       "155466        9212.58    212.92           7.15      321.97      False  \n",
+       "156509        9212.58    212.92           7.15      321.97      False  \n",
+       "157548        9273.54    219.83           0.00      321.84      False  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "839ed067",
+   "metadata": {},
+   "source": [
+    "## Sin and Cos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7b99bb4b",
+   "metadata": {},
+   "source": [
+    "Here, true track is circular, which means 0 degrees = 360 degrees but our model wouldn't understand that unless explicitly stated. So, it makes sense to convert it into sin and cos."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "05165478",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "convert degrees into radian first.\n",
+    "\"\"\"\n",
+    "theta = np.deg2rad(df[\"true_track\"])\n",
+    "df[\"track_sin\"] = np.sin(theta)\n",
+    "df[\"track_cos\"] = np.cos(theta)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fe740510",
+   "metadata": {},
+   "source": [
+    "## Change in Time (Delta)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fd82a02c",
+   "metadata": {},
+   "source": [
+    "Next, comes the change in time (delta) for a specific aircraft. Showing us how much time has passed between two points of the same aircraft."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "a66672bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"timestamp\"] = pd.to_datetime(df[\"timestamp\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "cc406e1b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "change in time (delta)\n",
+    "\"\"\"\n",
+    "df[\"delta_time\"] = (\n",
+    "    df.groupby(\"icao24\")[\"timestamp\"]\n",
+    "        .diff()\n",
+    "        .dt.total_seconds()\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7ca41c20",
+   "metadata": {},
+   "source": [
+    "## Distance Travelled"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "22466900",
+   "metadata": {},
+   "source": [
+    "The haversine formula calculates the shortest distance (\"as-the-crow-flies\") between two points on a sphere (like Earth) using their latitude and longitude, with less than 1% error"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "59cffb15",
+   "metadata": {},
+   "source": [
+    "D = 2 * μ_E * sin^-1( sqrt( sin^2((lat2-lat1)/2) + cos(lat1)cos(lat2)sin^2((lon2-lon1)/2) ) )\n",
+    "where:\n",
+    "\n",
+    "    D = Great Circle Arc Length (distance)\n",
+    "    lat 1 = latitude of first point\n",
+    "    lon 1 = longitude of first point\n",
+    "    lat 2 = latitude of second point\n",
+    "    lon 2 = longitude of second point\n",
+    "    μE = Mean Radius of the Earth (6371.009 km)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "b6d86a9e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def haversine(lat1, lon1, lat2, lon2):\n",
+    "    \"\"\"calculates shortest distance between two points using haversine formula.\n",
+    "\n",
+    "    Args:\n",
+    "        lat1 (float): latitude of first point\n",
+    "        lon1 (float): longitude of first point\n",
+    "        lat2 (float): latitude of second point\n",
+    "        lon2 (float): longitude of second point\n",
+    "    \"\"\"\n",
+    "    R = 6371000     # radius of Earth\n",
+    "    \n",
+    "    lat1, lon1, lat2, lon2 = map(np.radians, [lat1, lon1, lat2, lon2])      # degree to radian\n",
+    "    dlat = lat2 - lat1      \n",
+    "    dlon = lon2 - lon1\n",
+    "    \n",
+    "    a = np.sin(dlat / 2)**2 + np.cos(lat1) * np.cos(lat2) * np.sin(dlon / 2)**2\n",
+    "    c = 2 * np.arctan2(np.sqrt(a), np.sqrt(1-a))\n",
+    "    \n",
+    "    return R * c"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e04083d",
+   "id": "0fbdb67e",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "df[\"prev_lat\"] = df.groupby(\"icao24\")[\"latitude\"].shift(1)\n",
+    "df[\"prev_lon\"] = df.groupby(\"icao24\")[\"longitude\"].shift(1)\n",
+    "df[\"distance_delta\"] = haversine(\n",
+    "    df[\"prev_lat\"],\n",
+    "    df[\"prev_lon\"],\n",
+    "    df[\"latitude\"],\n",
+    "    df[\"longitude\"]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1c78f1f7",
+   "metadata": {},
+   "source": [
+    "## Acceleration (m/s²)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6552e06d",
+   "metadata": {},
+   "source": [
+    "Calculate acceleration."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "0981185b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"prev_velocity\"] = df.groupby(\"icao24\")[\"velocity\"].shift(1)\n",
+    "df[\"acceleration\"] = (\n",
+    "    (df[\"velocity\"] - df[\"prev_velocity\"]) / df[\"delta_time\"]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb06d4c2",
+   "metadata": {},
+   "source": [
+    "## Turn rate (degrees per second)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ae2f4fd1",
+   "metadata": {},
    "source": []
   }
  ],
