fix: feature engineering

--- a/notebooks/feature_engineering.ipynb
+++ b/notebooks/feature_engineering.ipynb
@@ -519,9 +519,353 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae2f4fd1",
+   "id": "8ba91b46",
    "metadata": {},
-   "source": []
+   "source": [
+    "Calculate Turn rate of an aircraft."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "b6140663",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"prev_track\"] = df.groupby(\"icao24\")[\"true_track\"].shift(1)\n",
+    "track_diff = df[\"true_track\"] - df[\"prev_track\"]\n",
+    "track_diff = (track_diff + 180) % 360 -180\n",
+    "df[\"turn_rate\"] = track_diff / df[\"delta_time\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5e385033",
+   "metadata": {},
+   "source": [
+    "## Climb phase flag"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "97afb2ff",
+   "metadata": {},
+   "source": [
+    "1 = aircraft is climbing  \n",
+    "0 = level  \n",
+    "-1 = aircraft is descending"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "8c4f5db8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"climb_phase\"] = 0\n",
+    "df.loc[df[\"vertical_rate\"] > 1.0, \"climb_phase\"] = 1\n",
+    "df.loc[df[\"vertical_rate\"] < 1.0, \"climb_phase\"] = -1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3edda14e",
+   "metadata": {},
+   "source": [
+    "## Speed Buckets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "19ede845",
+   "metadata": {},
+   "source": [
+    "velocity of the aircraft: slow, cruise, fast"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "d6be7295",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"speed_bucket\"] = \"slow\"\n",
+    "df.loc[df[\"velocity\"] >= 70, \"speed_bucket\"] = \"cruise\"\n",
+    "df.loc[df[\"velocity\"] >= 250, \"speed_bucket\"] = \"fast\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "0232f9de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.dropna(subset=[\n",
+    "    \"delta_time\",\n",
+    "    \"distance_delta\",\n",
+    "    \"acceleration\",\n",
+    "    \"turn_rate\"\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "7c15d6e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>icao24</th>\n",
+       "      <th>callsign</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>baro_altitude</th>\n",
+       "      <th>velocity</th>\n",
+       "      <th>vertical_rate</th>\n",
+       "      <th>true_track</th>\n",
+       "      <th>on_ground</th>\n",
+       "      <th>...</th>\n",
+       "      <th>delta_time</th>\n",
+       "      <th>prev_lat</th>\n",
+       "      <th>prev_lon</th>\n",
+       "      <th>distance_delta</th>\n",
+       "      <th>prev_velocity</th>\n",
+       "      <th>acceleration</th>\n",
+       "      <th>prev_track</th>\n",
+       "      <th>turn_rate</th>\n",
+       "      <th>climb_phase</th>\n",
+       "      <th>speed_bucket</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>154423</th>\n",
+       "      <td>2026-02-13 16:55:00</td>\n",
+       "      <td>0100a2</td>\n",
+       "      <td>MSR5060</td>\n",
+       "      <td>30.8654</td>\n",
+       "      <td>30.4872</td>\n",
+       "      <td>9197.34</td>\n",
+       "      <td>212.92</td>\n",
+       "      <td>7.15</td>\n",
+       "      <td>321.97</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>30.8237</td>\n",
+       "      <td>30.5251</td>\n",
+       "      <td>5881.473473</td>\n",
+       "      <td>213.33</td>\n",
+       "      <td>-0.024118</td>\n",
+       "      <td>322.05</td>\n",
+       "      <td>-0.004706</td>\n",
+       "      <td>1</td>\n",
+       "      <td>cruise</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>155466</th>\n",
+       "      <td>2026-02-13 16:55:05</td>\n",
+       "      <td>0100a2</td>\n",
+       "      <td>MSR5060</td>\n",
+       "      <td>30.8687</td>\n",
+       "      <td>30.4843</td>\n",
+       "      <td>9212.58</td>\n",
+       "      <td>212.92</td>\n",
+       "      <td>7.15</td>\n",
+       "      <td>321.97</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>30.8654</td>\n",
+       "      <td>30.4872</td>\n",
+       "      <td>459.631153</td>\n",
+       "      <td>212.92</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>321.97</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>cruise</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>157548</th>\n",
+       "      <td>2026-02-13 16:55:34</td>\n",
+       "      <td>0100a2</td>\n",
+       "      <td>MSR5060</td>\n",
+       "      <td>30.9144</td>\n",
+       "      <td>30.4426</td>\n",
+       "      <td>9273.54</td>\n",
+       "      <td>219.83</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>321.84</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>30.8687</td>\n",
+       "      <td>30.4843</td>\n",
+       "      <td>6454.113841</td>\n",
+       "      <td>212.92</td>\n",
+       "      <td>0.238276</td>\n",
+       "      <td>321.97</td>\n",
+       "      <td>-0.004483</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>cruise</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>158587</th>\n",
+       "      <td>2026-02-13 16:55:47</td>\n",
+       "      <td>0100a2</td>\n",
+       "      <td>MSR5060</td>\n",
+       "      <td>30.9368</td>\n",
+       "      <td>30.4223</td>\n",
+       "      <td>9349.74</td>\n",
+       "      <td>220.64</td>\n",
+       "      <td>7.80</td>\n",
+       "      <td>322.01</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>30.9144</td>\n",
+       "      <td>30.4426</td>\n",
+       "      <td>3154.898925</td>\n",
+       "      <td>219.83</td>\n",
+       "      <td>0.062308</td>\n",
+       "      <td>321.84</td>\n",
+       "      <td>0.013077</td>\n",
+       "      <td>1</td>\n",
+       "      <td>cruise</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>160658</th>\n",
+       "      <td>2026-02-13 16:55:57</td>\n",
+       "      <td>0100a2</td>\n",
+       "      <td>MSR5060</td>\n",
+       "      <td>30.9527</td>\n",
+       "      <td>30.4078</td>\n",
+       "      <td>9433.56</td>\n",
+       "      <td>219.51</td>\n",
+       "      <td>9.75</td>\n",
+       "      <td>321.95</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>30.9368</td>\n",
+       "      <td>30.4223</td>\n",
+       "      <td>2244.560185</td>\n",
+       "      <td>220.64</td>\n",
+       "      <td>-0.113000</td>\n",
+       "      <td>322.01</td>\n",
+       "      <td>-0.006000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>cruise</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 22 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 timestamp  icao24  callsign  latitude  longitude  \\\n",
+       "154423 2026-02-13 16:55:00  0100a2  MSR5060    30.8654    30.4872   \n",
+       "155466 2026-02-13 16:55:05  0100a2  MSR5060    30.8687    30.4843   \n",
+       "157548 2026-02-13 16:55:34  0100a2  MSR5060    30.9144    30.4426   \n",
+       "158587 2026-02-13 16:55:47  0100a2  MSR5060    30.9368    30.4223   \n",
+       "160658 2026-02-13 16:55:57  0100a2  MSR5060    30.9527    30.4078   \n",
+       "\n",
+       "        baro_altitude  velocity  vertical_rate  true_track  on_ground  ...  \\\n",
+       "154423        9197.34    212.92           7.15      321.97      False  ...   \n",
+       "155466        9212.58    212.92           7.15      321.97      False  ...   \n",
+       "157548        9273.54    219.83           0.00      321.84      False  ...   \n",
+       "158587        9349.74    220.64           7.80      322.01      False  ...   \n",
+       "160658        9433.56    219.51           9.75      321.95      False  ...   \n",
+       "\n",
+       "        delta_time  prev_lat  prev_lon  distance_delta  prev_velocity  \\\n",
+       "154423        17.0   30.8237   30.5251     5881.473473         213.33   \n",
+       "155466         5.0   30.8654   30.4872      459.631153         212.92   \n",
+       "157548        29.0   30.8687   30.4843     6454.113841         212.92   \n",
+       "158587        13.0   30.9144   30.4426     3154.898925         219.83   \n",
+       "160658        10.0   30.9368   30.4223     2244.560185         220.64   \n",
+       "\n",
+       "        acceleration  prev_track  turn_rate  climb_phase  speed_bucket  \n",
+       "154423     -0.024118      322.05  -0.004706            1        cruise  \n",
+       "155466      0.000000      321.97   0.000000            1        cruise  \n",
+       "157548      0.238276      321.97  -0.004483           -1        cruise  \n",
+       "158587      0.062308      321.84   0.013077            1        cruise  \n",
+       "160658     -0.113000      322.01  -0.006000            1        cruise  \n",
+       "\n",
+       "[5 rows x 22 columns]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "02d238d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['timestamp', 'icao24', 'callsign', 'latitude', 'longitude',\n",
+       "       'baro_altitude', 'velocity', 'vertical_rate', 'true_track', 'on_ground',\n",
+       "       'track_sin', 'track_cos', 'delta_time', 'prev_lat', 'prev_lon',\n",
+       "       'distance_delta', 'prev_velocity', 'acceleration', 'prev_track',\n",
+       "       'turn_rate', 'climb_phase', 'speed_bucket'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "89a7fa52",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(\n",
+    "    \"../data/clean/opensky_asia_features.csv\",\n",
+    "    index=False\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
