feat: Implement random forests

--- a/modelling/climb_phase_detection.ipynb
+++ b/modelling/climb_phase_detection.ipynb
@@ -48,7 +48,8 @@
        "      <th>vertical_rate</th>\n",
        "      <th>true_track</th>\n",
        "      <th>on_ground</th>\n",
-       "      <th>...</th>\n",
+       "      <th>track_sin</th>\n",
+       "      <th>track_cos</th>\n",
        "      <th>delta_time</th>\n",
        "      <th>prev_lat</th>\n",
        "      <th>prev_lon</th>\n",
@@ -74,7 +75,8 @@
        "      <td>7.15</td>\n",
        "      <td>321.97</td>\n",
        "      <td>False</td>\n",
-       "      <td>...</td>\n",
+       "      <td>-0.616074</td>\n",
+       "      <td>0.787688</td>\n",
        "      <td>17.0</td>\n",
        "      <td>30.8237</td>\n",
        "      <td>30.5251</td>\n",
@@ -98,7 +100,8 @@
        "      <td>7.15</td>\n",
        "      <td>321.97</td>\n",
        "      <td>False</td>\n",
-       "      <td>...</td>\n",
+       "      <td>-0.616074</td>\n",
+       "      <td>0.787688</td>\n",
        "      <td>5.0</td>\n",
        "      <td>30.8654</td>\n",
        "      <td>30.4872</td>\n",
@@ -122,7 +125,8 @@
        "      <td>0.00</td>\n",
        "      <td>321.84</td>\n",
        "      <td>False</td>\n",
-       "      <td>...</td>\n",
+       "      <td>-0.617860</td>\n",
+       "      <td>0.786288</td>\n",
        "      <td>29.0</td>\n",
        "      <td>30.8687</td>\n",
        "      <td>30.4843</td>\n",
@@ -146,7 +150,8 @@
        "      <td>7.80</td>\n",
        "      <td>322.01</td>\n",
        "      <td>False</td>\n",
-       "      <td>...</td>\n",
+       "      <td>-0.615524</td>\n",
+       "      <td>0.788118</td>\n",
        "      <td>13.0</td>\n",
        "      <td>30.9144</td>\n",
        "      <td>30.4426</td>\n",
@@ -170,7 +175,8 @@
        "      <td>9.75</td>\n",
        "      <td>321.95</td>\n",
        "      <td>False</td>\n",
-       "      <td>...</td>\n",
+       "      <td>-0.616349</td>\n",
+       "      <td>0.787473</td>\n",
        "      <td>10.0</td>\n",
        "      <td>30.9368</td>\n",
        "      <td>30.4223</td>\n",
@@ -184,37 +190,15 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 22 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "             timestamp  icao24  callsign  latitude  longitude  baro_altitude  \\\n",
-       "0  2026-02-13 16:55:00  0100a2  MSR5060    30.8654    30.4872        9197.34   \n",
-       "1  2026-02-13 16:55:05  0100a2  MSR5060    30.8687    30.4843        9212.58   \n",
-       "2  2026-02-13 16:55:34  0100a2  MSR5060    30.9144    30.4426        9273.54   \n",
-       "3  2026-02-13 16:55:47  0100a2  MSR5060    30.9368    30.4223        9349.74   \n",
-       "4  2026-02-13 16:55:57  0100a2  MSR5060    30.9527    30.4078        9433.56   \n",
-       "\n",
-       "   velocity  vertical_rate  true_track  on_ground  ...  delta_time  prev_lat  \\\n",
-       "0    212.92           7.15      321.97      False  ...        17.0   30.8237   \n",
-       "1    212.92           7.15      321.97      False  ...         5.0   30.8654   \n",
-       "2    219.83           0.00      321.84      False  ...        29.0   30.8687   \n",
-       "3    220.64           7.80      322.01      False  ...        13.0   30.9144   \n",
-       "4    219.51           9.75      321.95      False  ...        10.0   30.9368   \n",
-       "\n",
-       "   prev_lon  distance_delta  prev_velocity  acceleration  prev_track  \\\n",
-       "0   30.5251     5881.473473         213.33     -0.024118      322.05   \n",
-       "1   30.4872      459.631153         212.92      0.000000      321.97   \n",
-       "2   30.4843     6454.113841         212.92      0.238276      321.97   \n",
-       "3   30.4426     3154.898925         219.83      0.062308      321.84   \n",
-       "4   30.4223     2244.560185         220.64     -0.113000      322.01   \n",
-       "\n",
-       "   turn_rate  climb_phase  speed_bucket  \n",
-       "0  -0.004706            1        cruise  \n",
-       "1   0.000000            1        cruise  \n",
-       "2  -0.004483           -1        cruise  \n",
-       "3   0.013077            1        cruise  \n",
-       "4  -0.006000            1        cruise  \n",
+       "             timestamp  icao24  callsign  ...  turn_rate  climb_phase  speed_bucket\n",
+       "0  2026-02-13 16:55:00  0100a2  MSR5060   ...  -0.004706            1        cruise\n",
+       "1  2026-02-13 16:55:05  0100a2  MSR5060   ...   0.000000            1        cruise\n",
+       "2  2026-02-13 16:55:34  0100a2  MSR5060   ...  -0.004483           -1        cruise\n",
+       "3  2026-02-13 16:55:47  0100a2  MSR5060   ...   0.013077            1        cruise\n",
+       "4  2026-02-13 16:55:57  0100a2  MSR5060   ...  -0.006000            1        cruise\n",
        "\n",
        "[5 rows x 22 columns]"
       ]
@@ -286,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "0dac8165",
    "metadata": {},
    "outputs": [],
@@ -304,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "06351345",
    "metadata": {},
    "outputs": [],
@@ -324,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "ba99328d",
    "metadata": {},
    "outputs": [],
@@ -353,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "c494f0c6",
    "metadata": {},
    "outputs": [
@@ -497,29 +481,17 @@
        "</div>"
       ],
       "text/plain": [
-       "   baro_altitude  velocity  distance_delta  acceleration  turn_rate  \\\n",
-       "3        9349.74    220.64     3154.898925      0.062308   0.013077   \n",
-       "4        9433.56    219.51     2244.560185     -0.113000  -0.006000   \n",
-       "5        9464.04    219.51      649.638854      0.000000   0.000000   \n",
-       "6        9593.58    216.53     2621.831223     -0.119200  -0.004000   \n",
-       "7        9776.46    215.41     4473.650931     -0.086154  -0.004615   \n",
+       "   baro_altitude  velocity  distance_delta  ...   dist_lag_3  climb_phase  icao24\n",
+       "3        9349.74    220.64     3154.898925  ...  5881.473473            1  0100a2\n",
+       "4        9433.56    219.51     2244.560185  ...   459.631153            1  0100a2\n",
+       "5        9464.04    219.51      649.638854  ...  6454.113841            1  0100a2\n",
+       "6        9593.58    216.53     2621.831223  ...  3154.898925            1  0100a2\n",
+       "7        9776.46    215.41     4473.650931  ...  2244.560185            1  0100a2\n",
        "\n",
-       "   delta_time  track_sin  track_cos  accel_lag_1  accel_lag_2  accel_lag_3  \\\n",
-       "3        13.0  -0.615524   0.788118     0.238276     0.000000    -0.024118   \n",
-       "4        10.0  -0.616349   0.787473     0.062308     0.238276     0.000000   \n",
-       "5         3.0  -0.616349   0.787473    -0.113000     0.062308     0.238276   \n",
-       "6        25.0  -0.617722   0.786396     0.000000    -0.113000     0.062308   \n",
-       "7        13.0  -0.618546   0.785749    -0.119200     0.000000    -0.113000   \n",
-       "\n",
-       "    dist_lag_1   dist_lag_2   dist_lag_3  climb_phase  icao24  \n",
-       "3  6454.113841   459.631153  5881.473473            1  0100a2  \n",
-       "4  3154.898925  6454.113841   459.631153            1  0100a2  \n",
-       "5  2244.560185  3154.898925  6454.113841            1  0100a2  \n",
-       "6   649.638854  2244.560185  3154.898925            1  0100a2  \n",
-       "7  2621.831223   649.638854  2244.560185            1  0100a2  "
+       "[5 rows x 16 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -538,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "e06a35d2",
    "metadata": {},
    "outputs": [],
@@ -570,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "6366466c",
    "metadata": {},
    "outputs": [],
@@ -591,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "id": "3267707d",
    "metadata": {},
    "outputs": [
@@ -1283,7 +1255,7 @@
        "LogisticRegression(class_weight='balanced', max_iter=1000)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1300,7 +1272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "id": "91ff71b3",
    "metadata": {},
    "outputs": [
@@ -1341,7 +1313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "id": "982019b5",
    "metadata": {},
    "outputs": [
@@ -1463,7 +1435,7 @@
        "1         velocity -9.361149"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1494,8 +1466,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "3dbcf959",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "          -1       0.96      0.91      0.93    162977\n",
+      "           0       0.79      0.38      0.52       751\n",
+      "           1       0.63      0.79      0.70     30843\n",
+      "\n",
+      "    accuracy                           0.89    194571\n",
+      "   macro avg       0.79      0.70      0.72    194571\n",
+      "weighted avg       0.90      0.89      0.90    194571\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "rf = RandomForestClassifier(\n",
+    "    n_estimators = 300,\n",
+    "    max_depth = 15,\n",
+    "    min_samples_leaf = 50,\n",
+    "    class_weight = \"balanced\", \n",
+    "    n_jobs = -1,\n",
+    "    random_state = 42\n",
+    ")\n",
+    "rf.fit(X_train, y_train)\n",
+    "y_pred = rf.predict(X_val)\n",
+    "print(classification_report(y_val, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "09984500",
    "metadata": {},
    "outputs": [],
    "source": []
